[tool.poetry]
name = "use-advanced-library"
version = "0.1.0"
description = ""
authors = ["dongju93 <spdlqj011@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
asyncmy = "^0.2"
fastapi = { extras = ["standard"], version = "^0.115" }
greenlet = "^3"
picologging = "^0.9"
pre-commit = "^4"
pydantic-settings = "^2"
pymongo = "^4"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
