[project]
name = "use-advanced-library"
version = "0.1.0"
description = ""
authors = [{ name = "dongju93", email = "spdlqj011@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncmy>=0.2",
    "fastapi[standard]>=0.115",
    "greenlet>=3",
    "logfire[fastapi]>=2",
    "motor[zstd]>=3",
    "picologging>=0.9",
    "pre-commit>=4",
    "pydantic-settings>=2",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
